force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Stripe Link</fullName>
            </value>
            <value>
                <fullName>ACH/Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Donor Advised Fund</fullName>
            </value>
            <value>
                <fullName>Stock Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>