force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method_Stripe__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Stripe__c</fullName>
    <description>Payment method parsed from Stripe transaction. This&apos;s a real payment method. See also Payment Method field that contains user selection on UI</description>
    <label>Payment Method (Stripe)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>US Bank Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>