force-app/main/default/objects/Payment_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_Method_Stripe__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Transaction_Date_Time__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>